# codenet-minerva-cargo

./: .gitignore  CONTRIBUTING.md  Dockerfile  MAINTAINERS.md  README.md  partitions.json  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
cargo/: __init__.py  cargo.py  cli.py  helper.py  standalone.py
cargo/metrics/: __init__.py  metric_utils.py  metrics.py
cargo/resources/acmeair/: bcs_per_class.json
cargo/resources/daytrader/: bcs_per_class.json
cargo/resources/jpetstore/: bcs_per_class.json
cargo/resources/plants/: bcs_per_class.json
cargo/ui/: Prototype6.js  app.py  createClassProb.html  dataProcessing.js  index.js  index_graph.html  index_prototype3.html  index_table copy.html  index_table.html  index_table.js  instructions.html  package-lock.json  styles.css
cargo/ui/data/: partitions.json  partitions2.json
cargo/utils/: __init__.py  logging.py  progress_bar_factory.py  transform_graph.py
extras/demo/: .gitignore
extras/demo/doop-in/: io.openliberty.sample.daytrader8.war
extras/demo/doop-out/: ALOAD_VAR.csv  ASTORE_VAR.csv  AnyCallGraphEdge.csv  ApplicationAllocation.csv  BeanClass.csv  CallDependency.csv  CallGraphEdge.csv  CallReturnDependency.csv  CallReturnDependencyNoCtx.csv  DependentInstructionsBetweenMethods.csv  EJBTransactionBean.csv  EntryPointClass.csv  Flows.csv  FlowsIntoConstArrayIndex.csv  FlowsIntoInstanceFieldBase.csv  FlowsIntoStaticField.csv  HeapCarriedDependencyFlows.csv  InstanceFieldPointsTo.csv  JAXRSAPIClass.csv  JAXRSAPIMethod.csv  MessageDrivenBean.csv  (+18 more)
(+188 files in other folders)
