[tool.poetry]
name = "cargo"
version = "0.1.0"
description = "Data guide refactoring of monolithic applications with CARGO"
authors = ["Rahul Krishna <i.m.ralk@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
cargo = "cargo.cli:app"

[tool.poetry.dependencies]
python = "^3.9"
networkx = "^2.8.8"
py2neo = "^2021.2.3"
pandas = "^1.5.1"
typer = {extras = ["all"], version = "^0.7.0"}
rich = "^12.6.0"
tqdm = "^4.64.1"
tabulate = "^0.9.0"
scipy = "^1.9.3"
ipdb = "^0.13.9"

[tool.poetry.group.dev.dependencies]
nose = "^1.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
